Update package.json with project details
Added project name, version, and dependencies.

--- a/package.json
+++ b/package.json
@@ -1,3 +1,8 @@
 {
-  "type": "module"
+  "name": "laila-mvp",
+  "version": "1.0.0",
+  "type": "module",
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.0"
+  }
 }
