--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "laila-mvp",
   "version": "1.0.0",
+  "description": "LAILA - Assistente Inteligente com IA",
   "type": "module",
+  "private": true,
+  "engines": {
+    "node": ">=18.x"
+  },
+  "scripts": {
+    "dev": "node api/chat.js",
+    "start": "node api/chat.js"
+  },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0"
+    "@supabase/supabase-js": "^2.39.0",
+    "node-fetch": "^3.3.2"
   }
 }
